--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,33 @@
       sans-serif;
 
     /* color: #333; */
-
-    
   }
+}
+
+@keyframes bounce {
+  0%,
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  50% {
+    transform: translateY(-10px);
+    opacity: 0;
+  }
+}
+
+.bounce {
+  animation: bounce 1.5s infinite;
+}
+
+.delay-1 {
+  animation-delay: 0s;
+}
+
+.delay-2 {
+  animation-delay: 0.05s;
+}
+
+.delay-3 {
+  animation-delay: 0.1s;
 }
